public/pl0.js
PL0 = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { prog: peg$parseprog },
        peg$startRuleFunction  = peg$parseprog,

        peg$c0 = peg$FAILED,
        peg$c1 = function(b) { return { type: 'program', block: b } },
        peg$c2 = function(v, p, s) { 
                     
                     return { 
                       type: 'block',
                       vars: v,
                       procs: p,
                       st: s
                     }        
                   },
        peg$c3 = function(c, v, p, s) {         
                     
                     return { 
                       type: 'block',
                       consts: c,
                       vars: v,
                       procs: p,
                       st: s
                     }        
                   },
        peg$c4 = function(c, p, s) { 
                     
                     return { 
                       type: 'block',
                       consts: c,
                       procs: p,
                       st: s
                     }        
                   },
        peg$c5 = function(p, s) { 
                     
                     return { 
                       type: 'block',
                       procs: p,
                       st: s
                     }        
                   },
        peg$c6 = [],
        peg$c7 = function(i, n, c) {     
                     
                     var result = [{type: '=', left: i, right: n}];
                     for (var x = 0; x < c.length; x++)
                       result.push({type: '=', left: c[x][1], right: c[x][3]});
                     
                     return result;
                   },
        peg$c8 = function(i, v) {     
                     
                     var ids = [i];
                     for (var x = 0; x < v.length; x++)
                       ids.push(v[x][1]);
                     
                     return ids;
                   },
        peg$c9 = null,
        peg$c10 = function(p) {
                          
                     var result = [];
                     for (var x = 0; x < p.length; x++)
                       result.push({type: 'procedure', id: p[x][1], arguments: p[x][2], block: p[x][4]});
                     
                     return result;
                   },
        peg$c11 = function(i, is) {
             
                     var result = [i];
                     for (var x = 0; x < is.length; x++)
                       result.push(is[x][1]);
                     
                     return result;
                   },
        peg$c12 = function(i, e) { return { type: '=', left: i, right: e }; },
        peg$c13 = function(i, a) { 
                     return { type: 'call', id: i, arguments: a }; 
                   },
        peg$c14 = function(l, r) { 
                     var result = [l];
                       for (var i = 0; i < r.length; i++)
                         result.push(r[i][1]);
                 
                       return result;
                   },
        peg$c15 = function(c, st, sf) {
                     return {
                       type: 'IFELSE',
                       condition:  e,
                       true_st: st,
                       false_st: sf,
                     };
                   },
        peg$c16 = function(c, st) {
                     return {
                       type: 'IF',
                       condition:  c,
                       st: st
                     };
                   },
        peg$c17 = function(o, e) { return { type: o, expression: e }; },
        peg$c18 = function(e1, c, e2) { return { type: c, left: e1, right: e2 }; },
        peg$c19 = function(t, r) { return tree(t,r); },
        peg$c20 = function(f, r) { return tree(f,r); },
        peg$c21 = function(t) { return t; },
        peg$c22 = /^[ \t\n\r]/,
        peg$c23 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c24 = "=",
        peg$c25 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c26 = function(op) { return op; },
        peg$c27 = /^[+\-]/,
        peg$c28 = { type: "class", value: "[+\\-]", description: "[+\\-]" },
        peg$c29 = /^[*\/]/,
        peg$c30 = { type: "class", value: "[*\\/]", description: "[*\\/]" },
        peg$c31 = /^[<>=!]/,
        peg$c32 = { type: "class", value: "[<>=!]", description: "[<>=!]" },
        peg$c33 = /^[=]/,
        peg$c34 = { type: "class", value: "[=]", description: "[=]" },
        peg$c35 = /^[<>]/,
        peg$c36 = { type: "class", value: "[<>]", description: "[<>]" },
        peg$c37 = "(",
        peg$c38 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c39 = ")",
        peg$c40 = { type: "literal", value: ")", description: "\")\"" },
        peg$c41 = ";",
        peg$c42 = { type: "literal", value: ";", description: "\";\"" },
        peg$c43 = ",",
        peg$c44 = { type: "literal", value: ",", description: "\",\"" },
        peg$c45 = ".",
        peg$c46 = { type: "literal", value: ".", description: "\".\"" },
        peg$c47 = "call",
        peg$c48 = { type: "literal", value: "call", description: "\"call\"" },
        peg$c49 = "begin",
        peg$c50 = { type: "literal", value: "begin", description: "\"begin\"" },
        peg$c51 = "end",
        peg$c52 = { type: "literal", value: "end", description: "\"end\"" },
        peg$c53 = "procedure",
        peg$c54 = { type: "literal", value: "procedure", description: "\"procedure\"" },
        peg$c55 = "const",
        peg$c56 = { type: "literal", value: "const", description: "\"const\"" },
        peg$c57 = "var",
        peg$c58 = { type: "literal", value: "var", description: "\"var\"" },
        peg$c59 = "if",
        peg$c60 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c61 = "then",
        peg$c62 = { type: "literal", value: "then", description: "\"then\"" },
        peg$c63 = "else",
        peg$c64 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c65 = "while",
        peg$c66 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c67 = "do",
        peg$c68 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c69 = "odd",
        peg$c70 = { type: "literal", value: "odd", description: "\"odd\"" },
        peg$c71 = /^[a-zA-Z_]/,
        peg$c72 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c73 = /^[a-zA-Z_0-9]/,
        peg$c74 = { type: "class", value: "[a-zA-Z_0-9]", description: "[a-zA-Z_0-9]" },
        peg$c75 = function(id) { 
                      return { type: 'ID', value: id }; 
                    },
        peg$c76 = /^[0-9]/,
        peg$c77 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c78 = function(digits) { 
                      return { type: 'NUM', value: parseInt(digits, 10) }; 
                    },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parseprog() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseblock();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseDOT();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c1(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseblock() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseVAR();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsevar();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseproc();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsest();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c2(s2, s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseCONST();
        if (s1 !== peg$FAILED) {
          s2 = peg$parsecons();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseVAR();
            if (s3 !== peg$FAILED) {
              s4 = peg$parsevar();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseproc();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parsest();
                  if (s6 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c3(s2, s4, s5, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseCONST();
          if (s1 !== peg$FAILED) {
            s2 = peg$parsecons();
            if (s2 !== peg$FAILED) {
              s3 = peg$parseproc();
              if (s3 !== peg$FAILED) {
                s4 = peg$parsest();
                if (s4 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  s1 = peg$c4(s2, s3, s4);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseproc();
            if (s1 !== peg$FAILED) {
              s2 = peg$parsest();
              if (s2 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c5(s1, s2);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          }
        }
      }

      return s0;
    }

    function peg$parsecons() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      s1 = peg$parseID();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseASSIGN();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNUMBER();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$currPos;
            s6 = peg$parseCOMA();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseID();
              if (s7 !== peg$FAILED) {
                s8 = peg$parseASSIGN();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseNUMBER();
                  if (s9 !== peg$FAILED) {
                    s6 = [s6, s7, s8, s9];
                    s5 = s6;
                  } else {
                    peg$currPos = s5;
                    s5 = peg$c0;
                  }
                } else {
                  peg$currPos = s5;
                  s5 = peg$c0;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$c0;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$c0;
            }
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$currPos;
              s6 = peg$parseCOMA();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseID();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseASSIGN();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parseNUMBER();
                    if (s9 !== peg$FAILED) {
                      s6 = [s6, s7, s8, s9];
                      s5 = s6;
                    } else {
                      peg$currPos = s5;
                      s5 = peg$c0;
                    }
                  } else {
                    peg$currPos = s5;
                    s5 = peg$c0;
                  }
                } else {
                  peg$currPos = s5;
                  s5 = peg$c0;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$c0;
              }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parsePYC();
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c7(s1, s3, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsevar() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseID();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseCOMA();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseID();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$c0;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseCOMA();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseID();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsePYC();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c8(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseproc() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parsePROCEDURE();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseID();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseargs();
          if (s5 === peg$FAILED) {
            s5 = peg$c9;
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parsePYC();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseblock();
              if (s7 !== peg$FAILED) {
                s8 = peg$parsePYC();
                if (s8 !== peg$FAILED) {
                  s3 = [s3, s4, s5, s6, s7, s8];
                  s2 = s3;
                } else {
                  peg$currPos = s2;
                  s2 = peg$c0;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$c0;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$c0;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parsePROCEDURE();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseID();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseargs();
            if (s5 === peg$FAILED) {
              s5 = peg$c9;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parsePYC();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseblock();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsePYC();
                  if (s8 !== peg$FAILED) {
                    s3 = [s3, s4, s5, s6, s7, s8];
                    s2 = s3;
                  } else {
                    peg$currPos = s2;
                    s2 = peg$c0;
                  }
                } else {
                  peg$currPos = s2;
                  s2 = peg$c0;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$c0;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c10(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseargs() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseLEFTPAR();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parseCOMA();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseID();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$c0;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parseCOMA();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseID();
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseRIGHTPAR();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c11(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsest() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseID();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseASSIGN();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseexp();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c12(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseCALL();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseID();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseargs();
            if (s3 === peg$FAILED) {
              s3 = peg$c9;
            }
            if (s3 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c13(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseBEGIN();
          if (s1 !== peg$FAILED) {
            s2 = peg$parsest();
            if (s2 !== peg$FAILED) {
              s3 = [];
              s4 = peg$currPos;
              s5 = peg$parsePYC();
              if (s5 !== peg$FAILED) {
                s6 = peg$parsest();
                if (s6 !== peg$FAILED) {
                  s5 = [s5, s6];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$c0;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
              while (s4 !== peg$FAILED) {
                s3.push(s4);
                s4 = peg$currPos;
                s5 = peg$parsePYC();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parsest();
                  if (s6 !== peg$FAILED) {
                    s5 = [s5, s6];
                    s4 = s5;
                  } else {
                    peg$currPos = s4;
                    s4 = peg$c0;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$c0;
                }
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$parseEND();
                if (s4 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  s1 = peg$c14(s2, s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseIF();
            if (s1 !== peg$FAILED) {
              s2 = peg$parsecond();
              if (s2 !== peg$FAILED) {
                s3 = peg$parseTHEN();
                if (s3 !== peg$FAILED) {
                  s4 = peg$parsest();
                  if (s4 !== peg$FAILED) {
                    s5 = peg$parseELSE();
                    if (s5 !== peg$FAILED) {
                      s6 = peg$parsest();
                      if (s6 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c15(s2, s4, s6);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c0;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseIF();
              if (s1 !== peg$FAILED) {
                s2 = peg$parsecond();
                if (s2 !== peg$FAILED) {
                  s3 = peg$parseTHEN();
                  if (s3 !== peg$FAILED) {
                    s4 = peg$parsest();
                    if (s4 !== peg$FAILED) {
                      peg$reportedPos = s0;
                      s1 = peg$c16(s2, s4);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c0;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parseWHILE();
                if (s1 !== peg$FAILED) {
                  s2 = peg$parsecond();
                  if (s2 !== peg$FAILED) {
                    s3 = peg$parseDO();
                    if (s3 !== peg$FAILED) {
                      s4 = peg$parsest();
                      if (s4 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c16(s2, s4);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c0;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsecond() {
      var s0, s1, s2, s3;
